formatter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp-formatter
  namespace: timestamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timestamp-formatter
  template:
    metadata:
      labels:
        app: timestamp-formatter
    spec:
      containers:
        - name: timestamp-formatter
          image: karslo92111/timestamp-formatter:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /_/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /_/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
