formatter/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: timestamp-formatter
spec:
  containers:
    - name: timestamp-formatter
      image: karslo92111/timestamp-formatter:latest
      ports:
        - containerPort: 8080
